**Refactor ConfigurationProviderImpl to simplify producer retrieval**
- Replaced retrieval logic for producers by removing intermediate data provider fetching and directly using `getProducersByConsumerIds`.
- Updated related tests and mock configurations to reflect this change.
- Simplified ProducerService, renaming and adapting methods to support new producer lookup logic via consumer IDs.